<resources>
    <string name="app_name">SeñasQueEnseñan</string>
    <string name="vacio"></string>
    <string name="en">En</string>
    <string name="señas">Señas</string>
    <string name="r">®</string>
    <string name="aceptar">Aceptar</string>
    <string name="edadhint">Escribe tu edad</string>
    <string name="nombrehint">Escribe tu nombre</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="palabras">En SevenSoft™ nos sentimos muy felices de que nos hayas elegido para aprender el lenguaje de las señas.
        prepárate para una gran experiencia interactiva y divertida. ¿Estás listo?</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="instruccionesActividad1">El objetivo de este juego es poner a pruba lo aprendido en la pasada lecciòn.
        El juego consiste en tratar de encontrar cartas que correspondan a la misma palabra en lenguaje de señas y su significado en espeañol,
        los cuales estàm por partes.</string>
</resources>
