<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_animation"
    android:id="@+id/layoutanimado"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="90sp"
                android:gravity="bottom"
                android:textStyle="bold"
                android:textColor="@color/colornaranja"
                android:text="@string/en"
                android:fontFamily="casual"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="70sp"
                android:textStyle="bold"
                android:gravity="bottom"
                android:textColor="@color/colorrosa"
                android:text="@string/señas"
                android:fontFamily="casual"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorrosa"
                android:text="@string/r"
                android:fontFamily="casual"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/colornegro"
            android:text="@string/bienvenido"
            android:fontFamily="casual"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colornegro"
            android:text="@string/palabras"
            android:fontFamily="casual"/>

        <EditText
            android:id="@+id/txtEdad"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="26sp"
            android:inputType="number"
            android:maxLength="3"
            android:fontFamily="casual"
            android:padding="9dp"
            android:hint="@string/edadhint"
            android:textColor="@color/colornegro"
            android:background="@drawable/edittext_redondeado"/>

        <EditText
            android:id="@+id/txtNombre"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="26sp"
            android:fontFamily="casual"
            android:padding="10dp"
            android:hint="@string/nombrehint"
            android:textColor="@color/colornegro"
            android:background="@drawable/edittext_redondeado"/>

        <ImageButton
            android:id="@+id/btnAceptar"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:src="@drawable/aceptar"
            android:background="@drawable/boton_redondeado"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>